# practice

./: git_update.sh  readme.md
_posts/: 2025-01-11-github-readme.md
cpp_pubsub/: package.xml
cpp_study/: 0-3.Hello,C++!  0-3.Hello,C++!.cpp  1-1.변수  1-1.변수.cpp  1-2.실수형  1-2.실수형.cpp  1-2.정수형  1-2.정수형.cpp  1-3.bool형  1-3.bool형.cpp  1-3.문자형  1-3.문자형.cpp  1-4.const제한자  1-4.const제한자.cpp  1-4.데이터형변환  1-4.데이터형변환.cpp  2-1.char문자열  2-1.char문자열.cpp  2-1.배열  2-1.배열.cpp  helloworld  helloworld.cpp
py_pubsub/: package.xml  setup.py
py_pubsub/py_pubsub/: publisher_member_function.py  subscriber_custom_msg.py  subscriber_member_function.py
py_srvcli/: package.xml  setup.py
py_srvcli/py_srvcli/: client_member_function.py  service_member_function.py
pyqt_ros/: package.xml  setup.cfg  setup.py
pyqt_ros/pyqt_ros/: gui_publisher.py  gui_stop_publisher.py  gui_subscriber.py
tutorial_interfaces/: CMakeLists.txt  package.xml
yolo_cv/: box_train.ipynb  camera_test.py  draw_tracking.py  manifest.txt  object_detection.py  object_tracking.py  person_train.ipynb
yolo_cv/labelImg-1.8.6_fix/data/: predefined_classes.txt
